<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/login_activity">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/login_background" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/housescript"
            android:gravity="center"
            android:lineSpacingExtra="12sp"
            android:text="vibes."
            android:textColor="#fff"
            android:textSize="100sp"
            android:typeface="normal"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/email_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="50dp"
            android:ems="10"
            android:fontFamily="@font/roboto_thin"
            android:hint="Email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <EditText
            android:id="@+id/password_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:ems="10"
            android:fontFamily="@font/roboto_thin"
            android:hint="Password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_field" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_button_blue"
            android:fontFamily="@font/roboto_regular"
            android:text="Login"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toStartOf="@+id/sign_up_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_field" />

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/roboto_regular"
            android:text="Sign Up"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/login_button"
            app:layout_constraintTop_toBottomOf="@+id/password_field" />

        <Button
            android:id="@+id/forgotPassword"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_button_grey"
            android:text="Forgot password?"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/sign_up_button"
            app:layout_constraintStart_toStartOf="@+id/login_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>