<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/signup_activity">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/login_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/housescript"
            android:gravity="center"
            android:lineSpacingExtra="12sp"
            android:text="vibes."
            android:textColor="#fff"
            android:textSize="80sp"
            android:typeface="normal" />

        <EditText
            android:id="@+id/username_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:fontFamily="@font/roboto_thin"
            android:hint="Username"
            android:inputType="text" />

        <EditText
            android:id="@+id/email_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:fontFamily="@font/roboto_thin"
            android:hint="Email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/first_name_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:fontFamily="@font/roboto_thin"
            android:hint="First Name"
            android:inputType="text" />

        <EditText
            android:id="@+id/last_name_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:fontFamily="@font/roboto_thin"
            android:hint="Last Name"
            android:inputType="text" />

        <EditText
            android:id="@+id/password_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:fontFamily="@font/roboto_thin"
            android:hint="Password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/confirm_password_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:fontFamily="@font/roboto_thin"
            android:hint="Confirm Password"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/sign_up_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="96dp"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@android:color/white"
                android:background="@drawable/rounded_button"
                android:text="Sign Up" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@android:color/white"
                android:background="@drawable/rounded_button_blue"
                android:padding="8dp"
                android:text="Login Instead" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>